Adding in gaming and logos html files

--- a/index.html
+++ b/index.html
@@ -187,10 +187,18 @@
             <h5 class="white-text">Links</h5>
             <ul>
               <li>
-                <a class="grey-text text-lighten-3" href="#!">Abstract</a>
+                <a class="grey-text text-lighten-3" href="index.html"
+                  >Abstract</a
+                >
               </li>
-              <li><a class="grey-text text-lighten-3" href="#!">Logos</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Gaming</a></li>
+              <li>
+                <a class="grey-text text-lighten-3" href="logos.html">Logos</a>
+              </li>
+              <li>
+                <a class="grey-text text-lighten-3" href="gaming.html"
+                  >Gaming</a
+                >
+              </li>
             </ul>
           </div>
         </div>
